# azure-monitor-alert-listener

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-build.sh  run_curl_example1.sh
dataset/: example.json  example1.json  example2.json  example3.json  kql-alert.kql
src/: main.rs
src/application/: mod.rs
src/application/log/: log_analytic_query.rs  mod.rs
src/application/mail/: mail_sender.rs  mod.rs  template_render.rs
src/domain/: models.rs
src/infrastructure/auth/: jwt.rs
src/interface/: state.rs
src/interface/api/: api_handler.rs  mod.rs
template/: mail_template.html
