[package]
name = "azure-monitor-alert-listener"
version = "0.1.0"
edition = "2024"


[dependencies]
pretty_env_logger = "0.5"
log = "0.4"
actix-web = "4"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
azure-ecs-rs = "0.1"
thiserror = "2"
tera = "1.20"


azure_core = {version = "0.21",default-features = false,features = ["enable_reqwest_rustls"]}
azure_identity = {version = "0.21",default-features = false,features = ["enable_reqwest_rustls"]}
reqwest = {version = "0.11" ,default-features = false, features = ["json","rustls-tls"] }
url = "2.5"

jsonwebtoken = "9.3"
tokio = "1.44.1"

[profile.release]
opt-level = "z"         # เล็กสุด ("z") หรือเร็วสุด ("3")
lto = true              # เปิด Link Time Optimization
codegen-units = 1       # ทำให้ compile ช้าลงแต่ binary เล็กลง
strip = true            # เอา symbol debug ออก (Rust 1.60+)
panic = "abort"         # ลดขนาด binary โดยไม่ใส่ unwinding